fix: page width, animation mobile, double main removed

--- a/docs/styles/style.css
+++ b/docs/styles/style.css
@@ -83,7 +83,6 @@ html {
   overflow-x: hidden;
   overflow-y: scroll;
   scroll-behavior: smooth;
-  width: 100vw;
   &:has(body.loading){
     scroll-behavior: unset;
     overflow-y: hidden;
